--- a/style.css
+++ b/style.css
@@ -1,125 +1,159 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: center;
 }
+
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
+
 form {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  display: inline-block;
-  padding: 20px;
-  border: 4px solid rgb(0, 0, 0);
-  border-radius: 5px;
+	display: flex;
+	flex-flow: row wrap;
+	align-items: center;
+	display: inline-block;
+	padding: 20px;
+	border: 4px solid rgb(0, 0, 0);
+	border-radius: 5px;
 }
+
 form label {
-  margin: 5px 10px 5px 0;
+	margin: 5px 10px 5px 0;
 }
+
 form input, select {
-  margin: 5px 10px 5px 0;
-  padding: 10px;
-  border-radius: 5px;
+	margin: 5px 10px 5px 0;
+	padding: 10px;
+	border-radius: 5px;
 }
+
 form button {
-  padding: 10px 20px;
-  font-size: 20px;
-  background-color: rgb(22, 141, 95);
-  border: 1px solid #ddd;
-  color: white;
-  cursor: pointer;
-  font-weight: bolder;
-  border-radius: 5px;
+	padding: 10px 20px;
+	font-size: 20px;
+	background-color: rgb(22, 141, 95);
+	border: 1px solid #ddd;
+	color: white;
+	cursor: pointer;
+	font-weight: bolder;
+	border-radius: 5px;
 }
+
 form button:hover {
-  background-color: rgb(113, 65, 225);
+	background-color: rgb(113, 65, 225);
 }
+
 @media (max-width: 800px) {
-  form input {
-     margin: 10px 0;
-  }
-  form {
-     flex-direction: column;
-     align-items: stretch;
-  }
+	form input {
+		margin: 10px 0;
+	}
+
+	form {
+		flex-direction: column;
+		align-items: stretch;
+	}
 }
 
 .model {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgb(0,0,0);
+	background-color: rgba(0,0,0,0.4);
 }
 
-
 .model-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+	background-color: #fefefe;
+	margin: auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
 }
 
 .close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+	color: #aaaaaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
+	color: #000;
+	text-decoration: none;
+	cursor: pointer;
 }
 
-button{
-  padding: 10px 20px;
-  font-size: 20px;
-  background-color: rgb(22, 141, 95);
-  border: 1px solid #ddd;
-  color: white;
-  cursor: pointer;
-  font-weight: bolder;
-  border-radius: 5px;
-}
-#close{
-  background-color: red;
-  color: #fefefe;
-  margin: 3px;
-  padding: 5px;
-  border-radius: 5px;
+button {
+	padding: 10px 20px;
+	font-size: 20px;
+	background-color: rgb(22, 141, 95);
+	border: 1px solid #ddd;
+	color: white;
+	cursor: pointer;
+	font-weight: bolder;
+	border-radius: 5px;
 }
 
-span{
-  background-color: cornflowerblue;
-  color: #fefefe;
-  margin: 3px;
-  padding: 5px;
-  border-radius: 5px;
+#close {
+	background-color: red;
+	color: #fefefe;
+	margin: 3px;
+	padding: 5px;
+	border-radius: 5px;
 }
-#messages span{
-  color: black;
-  padding: 5px;
-  display: block;
+
+span {
+	background-color: cornflowerblue;
+	color: #fefefe;
+	margin: 3px;
+	padding: 5px;
+	border-radius: 5px;
 }
-a{
-  background-color: black;
-  color: #fefefe;
-  padding: 5px;
-  margin: 5px;
-  border-radius: 5px;
-  text-decoration:none;  
+
+#messages span {
+	color: black;
+	padding: 5px;
+	display: block;
 }
+
+#idLinkedInIcon {
+	background-color: rgb(0, 102, 170);
+	border-radius: 6px;
+	color: white;
+	cursor: pointer;
+	display: inline-block;
+	font: bold 40px Arial, Helvetica, sans-serif;
+	height: 42px;
+	margin-top: 1px;
+	text-align: center;
+	width: 42px;
+}
+
+#idLinkedInIcon:hover {
+	background-color: #06d;
+}
+
+img {
+	margin-left: 2px;
+	width: 7%;
+	height: 7%;
+}
+
+a {
+	background-color: black;
+	color: #fefefe;
+	padding: 5px;
+	margin: 5px;
+	border-radius: 5px;
+	text-decoration: none;
+}
+
 a:hover {
-  background-color: green;
+	background-color: green;
 }
